force-app/main/default/objects/zkmulti__MCCustom_Address_Source__c/fields/zkmulti__BrandingField__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__BrandingField__c</fullName>
    <label>Branding Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>