force-app/main/default/objects/zkmulti__MCCustom_Address_Source__c/fields/zkmulti__Child_Package_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Child_Package_Object_Name__c</fullName>
    <label>Child Package Object Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>