force-app/main/default/objects/zkmulti__MCCustom_Address_Source__c/fields/zkmulti__Customs_Signer_Field__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Customs_Signer_Field__c</fullName>
    <label>Customs Signer Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>