force-app/main/default/objects/zkmulti__MCCustom_Address_Source__c/fields/zkmulti__CustomsItemObjectLookupField__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CustomsItemObjectLookupField__c</fullName>
    <label>Product Object Lookup Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>