force-app/main/default/objects/zkmulti__MCCustom_Address_Source__c/fields/zkmulti__DateField__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DateField__c</fullName>
    <label>Date Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>