force-app/main/default/objects/zkmulti__MCCustom_Address_Source__c/fields/zkmulti__Dimension_Units_Field__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Dimension_Units_Field__c</fullName>
    <label>Dimension Units Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>