force-app/main/default/objects/zkmulti__MCCustom_Address_Source__c/fields/zkmulti__NAFTACOField__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__NAFTACOField__c</fullName>
    <description>SF object Id</description>
    <inlineHelpText>SF object Id</inlineHelpText>
    <label>USMCA CO Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>