force-app/main/default/objects/zkmulti__MCCustom_Address_Source__c/fields/zkmulti__Package_Type_Field__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Package_Type_Field__c</fullName>
    <label>Package Type Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>