force-app/main/default/objects/zkmulti__MCCustom_Address_Source__c/fields/zkmulti__Return_Shipment_Field__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Return_Shipment_Field__c</fullName>
    <label>Return Shipment Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>