force-app/main/default/objects/zkmulti__MCCustom_Address_Source__c/fields/zkmulti__Sender_City_Field__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Sender_City_Field__c</fullName>
    <label>Sender City Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>